# pacha

./: .clippy.toml  .editorconfig  .gitignore  .pmat-metrics.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  cliff.toml  codecov.yml  justfile  release.toml  taplo.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  msrv.yml  mutation.yml  nightly.yml  release.yml  security.yml
.pmat/: baseline.json  context.db  project.toml
.pmat/metrics/: dependencies.json
benches/: content_address.rs
book/: book.toml
book/book/: 404.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
book/book/appendix/: api-reference.html  glossary.html  references.html
book/book/architecture/: blake3-hashing.html  content-addressed-storage.html  overview.html  sqlite-metadata.html
book/book/best-practices/: cicd-integration.html  model-documentation.html  reproducibility-checklist.html  versioning-strategy.html
book/book/cli/: data-commands.html  installation.html  model-commands.html  recipe-commands.html  run-commands.html
book/book/examples/: managing-datasets.html  quick-start.html  registering-models.html  tracking-experiments.html  training-workflows.html
book/book/lineage/: fine-tuning.html  lineage-graph.html  model-derivation.html  quantization.html
book/book/methodology/: mlops-artifacts.html  reproducibility.html  semantic-versioning.html  what-is-pacha.html
book/book/registry/: data-provenance.html  dataset-versioning.html  datasheets.html  environment-deps.html  hyperparameters.html  lifecycle-stages.html  model-cards.html  model-lineage.html  model-versioning.html  training-recipes.html
book/book/storage/: compression.html  content-addressing.html  deduplication.html  integrity-verification.html
book/src/: SUMMARY.md  introduction.md
book/src/architecture/: blake3-hashing.md  content-addressed-storage.md  sqlite-metadata.md
book/src/best-practices/: model-documentation.md  reproducibility-checklist.md
book/src/cli/: data-commands.md  model-commands.md  recipe-commands.md  run-commands.md
book/src/examples/: managing-datasets.md  quick-start.md  registering-models.md  tracking-experiments.md  training-workflows.md
book/src/lineage/: fine-tuning.md  lineage-graph.md  model-derivation.md  quantization.md
book/src/methodology/: mlops-artifacts.md  (+3 more)
contracts/: batch-ops-v1.yaml  loss-tracking-v1.yaml  optimizer-v1.yaml
docs/specifications/: model-data-recipe-spec.md
examples/: content_addressing.rs  crypto_demo.rs  experiment_tracking.rs  lineage_tracking.rs  model_versioning.rs  quick_start.rs  signing_demo.rs
src/: aliases.rs  cache.rs  catalog.rs  crypto.rs  error.rs  fetcher.rs  format.rs  lib.rs  main.rs  manifest.rs  prelude.rs  remote.rs  resolver.rs  signing.rs  uri.rs  verification_specs.rs
src/cli/: mod.rs
src/data/: datasheet.rs  mod.rs  version.rs
src/experiment/: mod.rs
src/lineage/: mod.rs
src/model/: card.rs  mod.rs  stage.rs  version.rs
src/recipe/: hyperparams.rs  mod.rs  version.rs
src/registry/: database.rs  mod.rs
src/storage/: content_address.rs  mod.rs  object_store.rs
tests/: cli.rs  contract_traits.rs  integration.rs  library_coverage.rs
(+15 files in other folders)
